--- a/japanese/tokenization/basic-analysis.ipynb
+++ b/japanese/tokenization/basic-analysis.ipynb
@@ -125,9 +125,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp = spacy.load('ja_core_news_sm') # Use spacy\n",
+    "nlp = spacy.load('ja_core_news_sm') # Use spaCy\n",
     "nlp.add_pipe('sentencizer')\n",
-    "doc = nlp(input_text) # Load text into spacy"
+    "doc = nlp(input_text) # Load text into spaCy"
    ]
   },
   {
@@ -162,13 +162,6 @@
     "ax.set(xlabel='字数', ylabel='文の数')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
