--- a/japanese/word-vectors/word-vectors.ipynb
+++ b/japanese/word-vectors/word-vectors.ipynb
@@ -67,9 +67,9 @@
    },
    "outputs": [],
    "source": [
-    "nlp = spacy.load('ja_core_news_sm') # Use spacy\n",
+    "nlp = spacy.load('ja_core_news_sm') # Use spaCy\n",
     "nlp.add_pipe('sentencizer')\n",
-    "doc = nlp(input_text) # Load text into spacy"
+    "doc = nlp(input_text) # Load text into spaCy"
    ]
   },
   {
@@ -131,13 +131,6 @@
    "source": [
     "w2v_model.wv.most_similar('不思議')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
